<resources>
    <string name="app_name">Chrysalis</string>
    <string name="Email">Infosys Mail Id</string>
    <string name="password">Password</string>
    <string name="Login">Login</string>
    <string name="signUp">Sign Up</string>
    <string name="forgotPassword">Forgot Password</string>
    <string name="cnfpassword">Confirm Password</string>
    <string name="signup">Sign Up</string>
    <string name="name">Name</string>
    <string name="test">Test</string>
    <string name="signout">Sign Out</string>
    <string name="currentWork">Specify your current area of work</string>
    <string name="personalProject">Specify any personal projects/learnings in the chosen area of interset</string>
    <string name="recentActivity">Recent Activity</string>
    <string name="updateActivity">Update Activity</string>
    <string name="redeem">Redeem Points</string>
    <string name="submit">Submit</string>
    <string-array name="activityType">
        <item>Choose activity Type</item>
        <item>Meeting</item>
        <item>Training Session</item>
        <item>POC</item>
        <item>Real Life Deployement</item>
    </string-array>
    <string-array name="interestGroups">
        <item>AI &amp; ML</item>
        <item>Data Science</item>
        <item>Mobility</item>
        <item>IOT</item>
        <item>Robotics</item>
    </string-array>
    <string-array name="activities">
        <item>Participated in 1 meeting</item>
        <item>Conducted Training Session</item>
        <item>Attended Speaker session</item>
        <item>Attended ETA Training</item>
        <item>Complete Accelerate Job</item>
        <item>Conducted Training</item>
        <item>Delivered Speaker session</item>
        <item>Built reusable code/libraries</item>
        <item>Participated in an event</item>
        <item>Conducted events</item>
        <item>Admin contribution</item>
        <item>Built POC</item>
        <item>Deployed real life solutions</item>
        <item>Participated in 3 consecutive meetings</item>
        <item>Participated in 5 consecutive meetings</item>
        <item>Participated in 10 consecutive meetings</item>
        <item>Participated in 15 consecutive meetings</item>
    </string-array>
    <string name="activityPoints">
        {"Participated in 1 meeting":50,
"Conducted Training Session":100,
"Attended Speaker session":100,
"Attended ETA Training":200,
"Complete Accelerate Job":200,
"Conducted Training":500,
"Delivered Speaker session":500,
"Built reusable code/libraries":500,
"Participated in an event":500,
"Conducted events":1000,
"Admin contribution":1000,
"Built POC":1000,
"Deployed real life solutions":2500,
"Participated in 3 consecutive meetings":100,
"Participated in 5 consecutive meetings":150,
"Participated in 10 consecutive meetings":250,
"Participated in 10 consecutive meetings":500}
    </string>
    <string name="title_activity_admins">AdminsActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="toBeApproved">To be approved</string>
    <string name="viewProfile">View My Profile</string>
    <string name="adminPage">Me as Admin</string>
    <string name="instructorPage">Me as Instructor</string>
    <string name="adminUser">Me as User</string>
    <string name="username">Username</string>
    <string name="activity">Activity</string>
    <string name="actPoints">Points</string>
    <string name="approve">Approve</string>
    <string name="reject">Reject</string>
    <string name="comments">Comments if any...</string>
    <string name="title_activity_user_and_status">User Profile &amp; Activity Update</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="date">Date</string>
    <string name="dateOfActivity">Date Of Activity</string>
    <string name="approved">Approved</string>
    <string name="rejected">Rejected</string>
    <string name="notApproved">Not Approved</string>
    <string name="infosysId">Infosys Mail Id</string>
    <string name="employeeId">Employee Id</string>
    <string name="infyId">yourid\@infosys.com</string>
    <string name="userComments">User Comments</string>
    <string name="toBeApprovedPoints">\u00A0 points are yet to be approved</string>
    <string name="approveRegistration">Approve User Registrations</string>
    <string name="approveActivities">Approve user activites</string>
    <string name="apprvRegistration">Approve User</string>
    <string name="rejectRegistration">Reject User </string>
    <string name="ResetPassword">Reset Password</string>
    <string name="newPassword">New Password</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="Submit">Reset</string>
    <string name="regEmail">Enter your registered email</string>
    <string name="editUpdateActivities">Edit, Update and Delete Activities</string>
    <string name="title_activity_admin_edit_add_update">Edit and Add Activities</string>
    <string name="activityName">Activity Name</string>
    <string name="activityPnts">Activity Points</string>
    <string name="addActivity">Add Activity</string>
    <string name="submitActivity">Submit Activity</string>
    <string name="activityDetails">Activity Details</string>
    <string name="resubmit">Resubmit</string>
    <string name="delete">Delete Activity</string>
    <string name="adminComments">Admin Comments</string>
    <string name="rejecttext">Your activity has been rejected by admin with above comments. Please resubmit the activity with the comments suggested by admin.</string>
    <string name="adminId">Approved/\nRejected by</string>
    <string name="approvalStatus">Approval Status</string>
    <string name="deleteActivity">Delete Activity</string>

</resources>
