<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpActivity"
    android:id="@+id/signUpActivity">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signup"
        android:id="@+id/welcome"
        android:textSize="20sp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/signup_username"
        android:layout_below="@id/welcome"
        android:hint="@string/name"
        android:inputType="textPersonName"
        android:imeOptions="actionNext"
        android:layout_marginTop="50dp"
        android:maxLines="1"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edt_signup_email"
        android:layout_below="@id/signup_username"
        android:hint="@string/Email"
        android:inputType="textEmailAddress"
        android:imeOptions="actionNext"
        android:maxLines="1"/>
    <android.support.v7.widget.AppCompatSpinner
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:id="@+id/interestGroup"
        android:entries="@array/interestGroups"
        android:layout_below="@id/edt_signup_email"
        android:background="@drawable/border_text_view"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:layout_marginTop="5dp"
        android:id="@+id/areaOfCurrentWork"
        android:hint="@string/currentWork"
        android:layout_below="@id/interestGroup"
        android:background="@drawable/border_text_view"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:layout_marginTop="5dp"
        android:id="@+id/personalProject"
        android:hint="@string/personalProject"
        android:layout_below="@id/areaOfCurrentWork"
        android:background="@drawable/border_text_view"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edt_signup_password"
        android:layout_below="@id/personalProject"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:layout_marginTop="10dp"
        android:imeOptions="actionNext"
        android:maxLines="1"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edt_signup_confirm_password"
        android:layout_below="@id/edt_signup_password"
        android:hint="@string/cnfpassword"
        android:inputType="textPassword"
        android:imeOptions="actionDone"
        android:layout_marginTop="10dp"
        android:maxLines="1"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btn_signup_signup"
        android:text="@string/signUp"
        android:layout_below="@+id/edt_signup_confirm_password" />

</RelativeLayout>
</ScrollView>
