<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:id="@+id/loginRelativeLayout">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:id="@+id/welcome"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textSize="20sp"
        android:textColor="@color/primary_text_material_light"/>
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/butterflyicon"
        android:foregroundGravity="center"
        android:layout_below="@id/welcome"
        android:layout_centerHorizontal="true"
        android:id="@+id/image"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edt_email"
        android:layout_below="@id/image"
        android:hint="@string/Email"
        android:text="vijay@infosys.com"
        android:inputType="textEmailAddress|textAutoComplete"
        android:imeOptions="actionNext"
        android:singleLine="true"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edt_password"
        android:layout_below="@id/edt_email"
        android:hint="@string/password"
        android:text="vijaysai"
        android:inputType="textPassword"
        android:imeOptions="actionDone"
        android:layout_marginTop="10dp"
        android:singleLine="true"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btn_signupLogin"
        android:layout_below="@+id/edt_password"
        android:orientation="vertical">
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btn_Login"
            android:text="@string/Login"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btn_signup"
            android:text="@string/signUp" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/forgotPassword"
            android:text="@string/forgotPassword"
            android:gravity="center"
            android:textSize="15sp"
            android:textColor="@android:color/holo_blue_dark"
            android:clickable="true"
            android:layout_marginTop="10dp"/>
    </LinearLayout>



</RelativeLayout>
