<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:paddingBottom="@dimen/activity_vertical_margin"
android:paddingLeft="@dimen/activity_horizontal_margin"
android:paddingRight="@dimen/activity_horizontal_margin"
android:paddingTop="@dimen/activity_vertical_margin"
tools:context="com.studioemvs.chrysalis.PasswordResetActivity">
<TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/resetPassword"
    android:text="@string/ResetPassword"
    android:layout_centerHorizontal="true"
    android:gravity="center"
    android:textSize="20sp"/>
<EditText
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/pwdRstemail"
    android:hint="@string/regEmail"
    android:maxLines="1"
    android:inputType="textEmailAddress"
    android:layout_marginTop="50dp"/>

<Button
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/submit"
    android:layout_below="@id/pwdRstemail"
    android:text="@string/Submit"
    android:layout_marginTop="15dp"/>

</RelativeLayout>

