<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context="com.studioemvs.chrysalis.AddNewActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/addActivity"
            android:textColor="#000000"
            android:textSize="20sp"
            android:textColorHint="@color/hinttext"
            android:gravity="center_horizontal"
            android:layout_marginTop="10dp"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/activityName"
            android:textColorHint="@color/hinttext"
            android:hint="@string/activityName"
            android:layout_marginTop="10dp"
            android:maxLines="1"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/activityPoints"
            android:hint="@string/activityPnts"
            android:inputType="number"
            android:textColorHint="@color/hinttext"
            android:layout_marginTop="10dp"
            android:maxLines="1"
            />
        <android.support.v7.widget.AppCompatSpinner
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:id="@+id/chrysalisGroup"
            android:entries="@array/interestGroups"
            android:textColorHint="@color/hinttext"
            android:layout_marginTop="10dp"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/newActDate"
            android:clickable="true"
            android:inputType="date"
            android:hint="@string/dateOfActivity"
            android:focusable="false"
            android:textSize="15sp"
            android:textColor="@color/primary_text_material_light"
            android:textColorHint="@color/hinttext"
            android:layout_marginTop="10dp"
            android:maxLines="1"
            />
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/submitAddAct"
            android:text="@string/submitActivity"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:background="@color/colorPrimaryDark"
            android:textColor="@android:color/white"
            android:textSize="15sp"/>
    </LinearLayout>


</RelativeLayout>
