<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.studioemvs.chrysalis.AdminEditActivity"
    android:padding="10dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/updateActivity"
            android:textColor="#000000"
            android:textSize="20sp"
            android:textColorHint="@color/hinttext"
            android:gravity="center_horizontal"
            android:layout_marginTop="10dp"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/edit_activityName"
            android:textColorHint="@color/hinttext"
            android:hint="@string/activityName"
            android:layout_marginTop="10dp"
            android:maxLines="1"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/edit_activityPoints"
            android:hint="@string/activityPnts"
            android:inputType="number"
            android:textColorHint="@color/hinttext"
            android:layout_marginTop="10dp"
            android:maxLines="1" />
        <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/submitUpdateAct"
        android:text="@string/updateActivity"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:background="@color/colorPrimaryDark"
        android:textColor="@android:color/white"
        android:textSize="15sp"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/deleteUpdateAct"
            android:text="@string/deleteActivity"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:background="@color/colorPrimaryDark"
            android:textColor="@android:color/white"
            android:textSize="15sp"/>
    </LinearLayout>


</RelativeLayout>
